--- a/TestTaskAskon/TestTaskAskon.csproj
+++ b/TestTaskAskon/TestTaskAskon.csproj
@@ -15,4 +15,10 @@
     <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
