--- a/TestTaskAskon/appsettings.json
+++ b/TestTaskAskon/appsettings.json
@@ -1,16 +1,5 @@
 {
-  //"exclude": [
-  //  "**/bin",
-  //  "**/bower_components",
-  //  "**/jspm_packages",
-  //  "**/node_modules",
-  //  "**/obj",
-  //  "**/platforms"
-  //]
-
   "ConnectionStrings": {
-    "MyDbConnection": "Data Source=WIN-KSIKVHIFPAT;Initial Catalog=testtaskAskon;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;MultiSubnetFailover=False"
-
+    "MyDbConnection": "Data Source=WIN-KSIKVHIFPAT;Initial Catalog=testtaskAskon;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;MultiSubnetFailover=False;"
   }
-  
 }
